js/js.translator/testData/incremental/invalidation/moveAndModifyInlineFunction/lib1/l1b.1.kt
inline fun inlineFun() = 1
